SAVE: Estado atual com bugs de logout e carregamento de dados

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <nav class="sidebar-nav">
                 <a href="home.html" class="nav-item active"> <i class="fas fa-chart-line"></i><span>Dashboard</span></a>
                 <a href="cronograma.html" class="nav-item"> <i class="fas fa-calendar-alt"></i><span>Cronograma</span></a>
-                <a href="#" class="nav-item"> <i class="fas fa-book-open"></i><span>Exercícios</span></a>
+                <a href="exercicios.html" class="nav-item"> <i class="fas fa-book-open"></i><span>Exercícios</span></a>
                 <a href="#" class="nav-item"> <i class="fas fa-file-alt"></i><span>Correção de Textos</span></a>
                 <a href="dicas-estrategicas.html" class="nav-item"> <i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
                 <a href="meu-perfil.html" class="nav-item"><i class="fas fa-user-cog"></i><span>Meu Perfil</span></a>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="features-grid">
                     <div class="feature-card"><div class="feature-header"><div class="feature-icon blue"><i class="fas fa-calendar-alt"></i></div><div class="feature-info"><h3>Cronograma Personalizado</h3><p>Crie e gerencie seu cronograma de estudos com IA</p></div></div><a href="cronograma.html" class="btn btn-primary btn-full">Acessar</a></div>
-                    <div class="feature-card"><div class="feature-header"><div class="feature-icon green"><i class="fas fa-book-open"></i></div><div class="feature-info"><h3>Exercícios Inteligentes</h3><p>Pratique com questões adaptadas ao seu nível</p></div></div><a href="#" class="btn btn-primary btn-full">Acessar</a></div>
+                    <div class="feature-card"><div class="feature-header"><div class="feature-icon green"><i class="fas fa-book-open"></i></div><div class="feature-info"><h3>Exercícios Inteligentes</h3><p>Pratique com questões adaptadas ao seu nível</p></div></div><a href="exercicios.html" class="btn btn-primary btn-full">Acessar</a></div>
                     <div class="feature-card"><div class="feature-header"><div class="feature-icon purple"><i class="fas fa-file-alt"></i></div><div class="feature-info"><h3>Correção de Textos</h3><p>Tenha suas redações corrigidas pela IA</p></div></div><a href="#" class="btn btn-primary btn-full">Acessar</a></div>
                     <div class="feature-card"><div class="feature-header"><div class="feature-icon orange"><i class="fas fa-bullseye"></i></div><div class="feature-info"><h3>Dicas Estratégicas</h3><p>Receba orientações personalizadas para sua aprovação</p></div></div><a href="dicas-estrategicas.html" class="btn btn-primary btn-full">Acessar</a></div>
                 </div>
