--- a/cronograma.html
+++ b/cronograma.html
@@ -84,7 +84,7 @@
             <nav class="sidebar-nav">
                 <a href="home.html" class="nav-item"><i class="fas fa-chart-line"></i><span>Dashboard</span></a>
                 <a href="cronograma.html" class="nav-item active"><i class="fas fa-calendar-alt"></i><span>Cronograma</span></a>
-                <a href="#" class="nav-item"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
+                <a href="exercicios.html" class="nav-item"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
                 <a href="#" class="nav-item"><i class="fas fa-file-alt"></i><span>Correção de Textos</span></a>
                 <a href="dicas-estrategicas.html" class="nav-item"><i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
                 <a href="meu-perfil.html" class="nav-item"><i class="fas fa-user-cog"></i><span>Meu Perfil</span></a>
