--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - ConcursoIA</title>
-    <link rel="stylesheet" href="dashboard-lovable.css"> 
+    <link rel="stylesheet" href="dashboard-lovable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -12,51 +12,137 @@
         <header class="dashboard-header">
             <div class="header-content">
                 <div class="header-left">
-                    <button class="sidebar-toggle" id="sidebarToggle"><i class="fas fa-bars"></i></button>
-                    <a href="home.html" style="text-decoration: none; color: inherit;">
-                        <div class="logo">
-                            <i class="fas fa-book-open"></i>
-                            <span>ConcursoIA</span>
-                        </div>
-                    </a>
+                    <button id="sidebarToggle" class="sidebar-toggle">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="logo">
+                        <i class="fas fa-book-open"></i>
+                        <span>ConcursoIA</span>
+                    </div>
                 </div>
                 <div class="header-right">
-                    <a href="meu-perfil.html" class="btn btn-ghost"> <i class="fas fa-user"></i><span>Meu Perfil</span></a>
-                    <button id="botao-logout" class="btn btn-ghost"><i class="fas fa-sign-out-alt"></i><span>Sair</span></button>
+                    <button class="btn btn-ghost">
+                        <i class="fas fa-user"></i>
+                        <span id="user-name">Carregando...</span>
+                    </button>
+                    <button id="btn-sair" class="btn btn-ghost">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Sair</span>
+                    </button>
                 </div>
             </div>
         </header>
-        <aside class="sidebar" id="sidebar">
+
+        <div id="sidebar" class="sidebar">
             <nav class="sidebar-nav">
-                <a href="home.html" class="nav-item active"> <i class="fas fa-chart-line"></i><span>Dashboard</span></a>
-                <a href="cronograma.html" class="nav-item"> <i class="fas fa-calendar-alt"></i><span>Cronograma</span></a>
-                <a href="exercicios.html" class="nav-item"> <i class="fas fa-book-open"></i><span>Exercícios</span></a>
-                <a href="#" class="nav-item"> <i class="fas fa-file-alt"></i><span>Correção de Textos</span></a>
-                <a href="dicas-estrategicas.html" class="nav-item"> <i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
-                <a href="meu-perfil.html" class="nav-item"><i class="fas fa-user-cog"></i><span>Meu Perfil</span></a>
+                <a href="home.html" class="nav-item active">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="cronograma.html" class="nav-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Cronograma</span>
+                </a>
+                <a href="exercicios.html" class="nav-item">
+                    <i class="fas fa-book-open"></i>
+                    <span>Exercícios</span>
+                </a>
+                <a href="dicas-estrategicas.html" class="nav-item">
+                    <i class="fas fa-bullseye"></i>
+                    <span>Dicas Estratégicas</span>
+                </a>
+                <a href="meu-perfil.html" class="nav-item">
+                    <i class="fas fa-user-cog"></i>
+                    <span>Meu Perfil</span>
+                </a>
             </nav>
-        </aside>
+        </div>
+        <div id="sidebarOverlay" class="sidebar-overlay"></div>
+
         <main class="main-content">
             <div class="content-wrapper">
-                <div class="welcome-section"><h1>Bem-vindo ao seu Dashboard, <span id="nome-usuario-dashboard">Usuário</span>!</h1><p>Acesse todas as funcionalidades da plataforma para acelerar seus estudos.</p></div>
+                <section class="welcome-section">
+                    <h1>Bem-vindo ao seu Dashboard</h1>
+                    <p>Acompanhe seu progresso e acesse as ferramentas de estudo.</p>
+                </section>
+                
                 <div class="stats-grid">
-                    <div class="stat-card"><div class="stat-header"><span class="stat-title">Dias de Estudo</span></div><div class="stat-content"><div class="stat-number blue">0</div><p class="stat-subtitle">Últimos 30 dias</p></div></div>
-                    <div class="stat-card"><div class="stat-header"><span class="stat-title">Exercícios Realizados</span></div><div class="stat-content"><div class="stat-number green">0</div><p class="stat-subtitle">Este mês</p></div></div>
-                    <div class="stat-card"><div class="stat-header"><span class="stat-title">Taxa de Acerto</span></div><div class="stat-content"><div class="stat-number purple">0%</div><p class="stat-subtitle">Média geral</p></div></div>
-                    <div class="stat-card"><div class="stat-header"><span class="stat-title">Textos Corrigidos</span></div><div class="stat-content"><div class="stat-number orange">0</div><p class="stat-subtitle">Este mês</p></div></div>
+                    <div class="stat-card">
+                        <div class="stat-header"><h3 class="stat-title">Dias de Estudo</h3></div>
+                        <div class="stat-content">
+                            <span id="stat-dias-estudo" class="stat-number blue">0</span>
+                            <span class="stat-subtitle">dias com atividades</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-header"><h3 class="stat-title">Exercícios Realizados</h3></div>
+                        <div class="stat-content">
+                            <span id="stat-exercicios" class="stat-number green">0</span>
+                            <span class="stat-subtitle">total</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-header"><h3 class="stat-title">Taxa de Acerto</h3></div>
+                        <div class="stat-content">
+                            <span id="stat-acertos" class="stat-number purple">0%</span>
+                            <span class="stat-subtitle">média</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-header"><h3 class="stat-title">Textos Corrigidos</h3></div>
+                        <div class="stat-content">
+                            <span id="stat-redacoes" class="stat-number orange">0</span>
+                            <span class="stat-subtitle">total</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="features-grid">
-                    <div class="feature-card"><div class="feature-header"><div class="feature-icon blue"><i class="fas fa-calendar-alt"></i></div><div class="feature-info"><h3>Cronograma Personalizado</h3><p>Crie e gerencie seu cronograma de estudos com IA</p></div></div><a href="cronograma.html" class="btn btn-primary btn-full">Acessar</a></div>
-                    <div class="feature-card"><div class="feature-header"><div class="feature-icon green"><i class="fas fa-book-open"></i></div><div class="feature-info"><h3>Exercícios Inteligentes</h3><p>Pratique com questões adaptadas ao seu nível</p></div></div><a href="exercicios.html" class="btn btn-primary btn-full">Acessar</a></div>
-                    <div class="feature-card"><div class="feature-header"><div class="feature-icon purple"><i class="fas fa-file-alt"></i></div><div class="feature-info"><h3>Correção de Textos</h3><p>Tenha suas redações corrigidas pela IA</p></div></div><a href="#" class="btn btn-primary btn-full">Acessar</a></div>
-                    <div class="feature-card"><div class="feature-header"><div class="feature-icon orange"><i class="fas fa-bullseye"></i></div><div class="feature-info"><h3>Dicas Estratégicas</h3><p>Receba orientações personalizadas para sua aprovação</p></div></div><a href="dicas-estrategicas.html" class="btn btn-primary btn-full">Acessar</a></div>
+
+                <div class="features-grid" style="margin-top: 32px;">
+                    <div class="feature-card">
+                        <div class="feature-header">
+                            <div class="feature-icon blue"><i class="fas fa-calendar-alt"></i></div>
+                            <div class="feature-info">
+                                <h3>Cronograma Personalizado</h3>
+                                <p>Crie e gerencie seu plano de estudos com IA.</p>
+                            </div>
+                        </div>
+                        <a href="cronograma.html" class="btn btn-primary btn-full">Acessar Cronogramas</a>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-header">
+                            <div class="feature-icon green"><i class="fas fa-book-open"></i></div>
+                            <div class="feature-info">
+                                <h3>Exercícios Inteligentes</h3>
+                                <p>Pratique com questões adaptadas ao seu nível.</p>
+                            </div>
+                        </div>
+                        <a href="exercicios.html" class="btn btn-primary btn-full">Praticar Exercícios</a>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-header">
+                            <div class="feature-icon orange"><i class="fas fa-bullseye"></i></div>
+                            <div class="feature-info">
+                                <h3>Dicas Estratégicas</h3>
+                                <p>Receba orientações para otimizar sua aprovação.</p>
+                            </div>
+                        </div>
+                        <a href="dicas-estrategicas.html" class="btn btn-primary btn-full">Ver Dicas</a>
+                    </div>
+                     <div class="feature-card">
+                        <div class="feature-header">
+                            <div class="feature-icon purple"><i class="fas fa-user-cog"></i></div>
+                            <div class="feature-info">
+                                <h3>Meu Perfil</h3>
+                                <p>Gerencie seus dados e configurações.</p>
+                            </div>
+                        </div>
+                        <a href="meu-perfil.html" class="btn btn-primary btn-full">Acessar Perfil</a>
+                    </div>
                 </div>
-                <div class="activity-card"><div class="activity-header"><h3>Atividade Recente</h3><p>Suas últimas ações na plataforma</p></div><div id="atividade-recente-lista" class="activity-content"><p>Nenhuma atividade recente.</p></div></div>
             </div>
         </main>
-        <div class="sidebar-overlay" id="sidebarOverlay"></div>
     </div>
-    <script src="dashboard.js"></script> 
-    <script type="module" src="app.js"></script> 
+
+    <script type="module" src="main-app.js"></script>
 </body>
 </html>
