--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -83,7 +83,7 @@
         </main>
         <div class="sidebar-overlay" id="sidebarOverlay"></div>
     </div>
-    <script src="dashboard.js"></script> 
+    <!-- <script src="dashboard.js"></script>  -->
     <script type="module" src="app.js"></script> 
 </body>
 </html>
